Archive2/37/748729d849ef88/output
main.cpp: In function 'int main()':
main.cpp:36:12: error: use of deleted function 'dec1::dec1(const dec1&)'
  dec1 d2(d1);
            ^
main.cpp:23:3: note: declared here
   dec1(const dec1&) = delete;
   ^
